force-app/main/default/objects/Contact/fields/Customer_Trade_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Trade_in_Date__c</fullName>
    <formula>Account.Customer_Trade_in_Date__c</formula>
    <label>PC Customer Trade in Date</label>
    <type>Date</type>
</CustomField>