force-app/main/default/objects/Contact/fields/Desire_boat_length__c.field-meta.xml
<CustomField>
    <fullName>Desire_boat_length__c</fullName>
    <label>PC Desired boat length</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>