force-app/main/default/objects/Contact/fields/Desire_boat_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Desire_boat_Manufacture__c</fullName>
    <label>PC Desired boat Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Skiers Choice(Moomba)</fullName>
            </value>
            <value>
                <fullName>Skiers Choice(Supra)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>