force-app/main/default/objects/Contact/fields/Desire_boat_model__c.field-meta.xml
<CustomField>
    <fullName>Desire_boat_model__c</fullName>
    <label>PC Desired boat model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>