force-app/main/default/objects/Contact/fields/Desire_price_high__c.field-meta.xml
<CustomField>
    <fullName>Desire_price_high__c</fullName>
    <label>PC Desired price high</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>