force-app/main/default/objects/Contact/fields/Desire_Price_low__c.field-meta.xml
<CustomField>
    <fullName>Desire_Price_low__c</fullName>
    <label>PC Desired Price low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>