force-app/main/default/objects/Contact/fields/Do_they_have_a_Trade2__c.field-meta.xml
<CustomField>
    <fullName>Do_they_have_a_Trade2__c</fullName>
    <label>PC Do they have a Trade?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>