force-app/main/default/objects/Contact/fields/IsOwnerActive__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerActive__c</fullName>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOwnerActive</label>
    <type>Checkbox</type>
</CustomField>