force-app/main/default/objects/Contact/fields/lead_Source__c.field-meta.xml
<CustomField>
    <fullName>lead_Source__c</fullName>
    <label>PC Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boat Trader</fullName>
            </value>
            <value>
                <fullName>Dealer Spike</fullName>
            </value>
            <value>
                <fullName>Mali Buboats</fullName>
            </value>
            <value>
                <fullName>Only Inboards</fullName>
            </value>
            <value>
                <fullName>Skiers Choice</fullName>
            </value>
            <value>
                <fullName>Boat.com</fullName>
            </value>
            <value>
                <fullName>Boat Show</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Surf Night</fullName>
            </value>
            <value>
                <fullName>Wakeboard Camp</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>South Town Water Sports</fullName>
            </value>
            <value>
                <fullName>Boats Monitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>