force-app/main/default/objects/Contact/fields/QBCustomerID__c.field-meta.xml
<CustomField>
    <fullName>QBCustomerID__c</fullName>
    <label>QBCustomerID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>