force-app/main/default/objects/Contact/fields/Test_Disired_High_Price__c.field-meta.xml
<CustomField>
    <fullName>Test_Disired_High_Price__c</fullName>
    <formula>Account.Desire_price_high__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Disired High Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>