force-app/main/default/objects/Contact/fields/Trade_Boat_Engine_SN__c.field-meta.xml
<CustomField>
    <fullName>Trade_Boat_Engine_SN__c</fullName>
    <formula>Account.Trade_Boat_Engine_SN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PC Trade Boat Engine SN</label>
    <type>Text</type>
</CustomField>