force-app/main/default/objects/Contact/fields/Trade_Boat_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Trade_Boat_Hrs__c</fullName>
    <formula>Account.Trade_Boat_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PC Trade Boat Hrs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>