force-app/main/default/objects/Contact/fields/Trade_Boat_Lien_Bank__c.field-meta.xml
<CustomField>
    <fullName>Trade_Boat_Lien_Bank__c</fullName>
    <formula>Account.Trade_Lien_Bank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Boat Lien Bank</label>
    <type>Text</type>
</CustomField>