force-app/main/default/objects/Contact/fields/Trade_Boat_Trailer_VIN__c.field-meta.xml
<CustomField>
    <fullName>Trade_Boat_Trailer_VIN__c</fullName>
    <formula>Account.Trade_Boat_Trailer_VIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PC Trade Boat Trailer VIN</label>
    <type>Text</type>
</CustomField>