force-app/main/default/objects/Contact/fields/Trade_In_Boat_HIN__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Boat_HIN__c</fullName>
    <formula>Account.Prospect_HIN_of_Current_Boat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade In Boat HIN</label>
    <type>Text</type>
</CustomField>