force-app/main/default/objects/Contact/fields/Trade_Make__c.field-meta.xml
<CustomField>
    <fullName>Trade_Make__c</fullName>
    <formula>TEXT( Account.Trade_Make__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PC Trade Make</label>
    <type>Text</type>
</CustomField>