force-app/main/default/objects/Contact/fields/Trade_Model__c.field-meta.xml
<CustomField>
    <fullName>Trade_Model__c</fullName>
    <description>Model of trade in boat</description>
    <formula>Account.Trade_Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PC Trade Model</label>
    <type>Text</type>
</CustomField>