force-app/main/default/objects/Contact/fields/Trade_Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Trade_Model_Year__c</fullName>
    <description>Date of Trade in Boat</description>
    <formula>Account.Trade_Model_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PC Trade Model Year</label>
    <type>Text</type>
</CustomField>