force-app/main/default/objects/Contact/fields/Trade_Payoff__c.field-meta.xml
<CustomField>
    <fullName>Trade_Payoff__c</fullName>
    <formula>Account.Trade_Pay_Off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Payoff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>